# hrvflower-esp32

./: .gitignore  CMakeLists.txt  LICENSE  README.md  idf_ext.py  partitions.csv  sdkconfig.defaults
.skills/.cursor/skills/hrvflower-dev/: SKILL.md  SKILL_CN.md  file-header.md  git-workflow.md
boards/espressif/esp_SensairShuttle/: README.md  README_CN.md  board_devices.yaml  board_info.yaml  board_peripherals.yaml  config.json  sdkconfig.defaults.board  setup_device.c
boards/m5stack/m5_AtomS3R/: README.md  README_CN.md  board_devices.yaml  board_info.yaml  board_peripherals.yaml  config.json  lp5562_backlight.c  sdkconfig.defaults.board  setup_device.c
components/esp-wifi-connect/: CMakeLists.txt  LICENSE  README.md  idf_component.yml  wifi_configuration_ap.cc  wifi_station.cc
components/esp-wifi-connect/assets/: wifi_configuration.html  wifi_configuration_done.html
components/esp-wifi-connect/include/: wifi_configuration_ap.h  wifi_manager.h
doc/: FIRMWARE.md  FIRMWARE_CN.md  FIRMWARE_IT.md  FIRMWARE_JA.md  INTEGRATION.md  INTEGRATION_CN.md  README_CN.md  README_IT.md  README_JA.md
doc/boards/: README.md  README_CN.md
main/: CMakeLists.txt  Kconfig.projbuild  board_display.c  board_display.h  display.cpp  hrv_battery.c  hrv_imu_wake.c  hrv_ota.cpp  hrv_power.cpp  hrv_status_store.cpp  hrv_ui.cpp  hrv_ui.hpp  hrv_user_btn.cpp  idf_component.yml  main.cpp  mqtt_hrv.cpp  mqtt_hrv.hpp  wifi_connect.cpp  wifi_connect.hpp
main/include/: board_display.h  display.hpp  hrv_battery.hpp  hrv_imu_wake.h  hrv_ota.hpp  hrv_power.hpp  hrv_status_store.hpp  hrv_ui.hpp  hrv_user_btn.hpp  mqtt_hrv.hpp  wifi_connect.hpp
scripts/: build_board.sh
